--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "next": "^14.2.17",
     "openai": "^4.71.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "lucide-react": "latest"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
